[master] Updated tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,33 @@
 {
-    "compilerOptions": {
-      "baseUrl": ".",
+  "include": [
+      "src/**/*"
+  ],
+  "exclude": [
+      "node_modules",
+      "**/*.test.ts",
+      "**/*.spec.ts",
+      "example"
+  ],
+  "compilerOptions": {
+      "lib": [
+          "es6"
+      ],
+      "types": [
+          "jasmine",
+          "node"
+      ],
       "declaration": true,
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
+      "target": "es5",
+      "pretty": true,
       "module": "commonjs",
+      "outDir": "./lib",
       "moduleResolution": "node",
-      "strictNullChecks": true,
-      "strictPropertyInitialization": true,
-      "noImplicitAny": true,
-      "noFallthroughCasesInSwitch": true,
-      "rootDir": ".",
-      "inlineSourceMap": true,
-      "lib": ["es5", "dom", "es2015.promise", "es2015.collection", "es2015.iterable", "es2015.core"],
-      "skipDefaultLibCheck": true,
-      "skipLibCheck": true,
-      "target": "es5"
-    },
-    "bazelOptions": {
-      "suppressTsconfigOverrideWarnings": true
-    },
-    "exclude": [
-      "bazel",
-      "common/locales",
-      "compiler-cli/integrationtest",
-      "elements/schematics",
-      // Do not build the example e2e spec files since those require custom typings and
-      // aren't required to build all packages.
-      "examples/**/e2e_test/*",
-      // Exclude the "main.ts" files for each example group because this file is used by
-      // Bazel to launch the devserver and uses AOT compilation.
-      "examples/*/main.ts",
-      "platform-server/integrationtest",
-      "router/test/aot_ngsummary_test",
-    ]
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "allowSyntheticDefaultImports": true,
+      "sourceMap": false,
+      "typeRoots": [
+          "node_modules/@types"
+      ],
   }
+}
