--- a/angular.json
+++ b/angular.json
@@ -3,21 +3,21 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "form-effects": {
+    "form-effects-docs": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "sass"
+          "style": "scss"
         }
       },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/form-effects",
+            "outputPath": "dist/form-effects-docs",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "form-effects:build"
+            "browserTarget": "form-effects-docs:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "form-effects:build:production"
+              "browserTarget": "form-effects-docs:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "form-effects:build"
+            "browserTarget": "form-effects-docs:build"
           }
         },
         "test": {
@@ -107,7 +107,7 @@
         }
       }
     },
-    "form-effects-e2e": {
+    "form-effects-docs-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -116,11 +116,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "form-effects:serve"
+            "devServerTarget": "form-effects-docs:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "form-effects:serve:production"
+              "devServerTarget": "form-effects-docs:serve:production"
             }
           }
         },
@@ -134,7 +134,42 @@
           }
         }
       }
+    },
+    "form-effects": {
+      "root": "projects/form-effects",
+      "sourceRoot": "projects/form-effects/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/form-effects/tsconfig.lib.json",
+            "project": "projects/form-effects/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/form-effects/src/test.ts",
+            "tsConfig": "projects/form-effects/tsconfig.spec.json",
+            "karmaConfig": "projects/form-effects/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/form-effects/tsconfig.lib.json",
+              "projects/form-effects/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }
   },
-  "defaultProject": "form-effects"
+  "defaultProject": "form-effects-docs"
 }
