--- a/package.json
+++ b/package.json
@@ -1,36 +1,52 @@
 {
-  "name": "form-effects",
-  "version": "1.0.5",
-  "description": "Provide your form superpowers by reacting to effects produced by control value changes",
-  "main": "index.js",
+  "name": "form-effects-docs",
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
+  "private": true,
   "dependencies": {
-    "@angular/core": "^7.2.8",
-    "@angular/common": "^7.2.8",
-    "@angular/forms": "^7.2.8",
-    "rxjs": "^6.0.0"
-  },
-  "peerDependencies": {
-    "@angular/platform-browser": "^7.2.8",
+    "@angular/animations": "~7.2.0",
+    "@angular/common": "~7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "~7.2.0",
+    "@angular/forms": "~7.2.0",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/router": "~7.2.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.3.3",
+    "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/undervane/form-effects.git"
-  },
-  "keywords": [
-    "angular",
-    "formgroup",
-    "reactive",
-    "form",
-    "async"
-  ],
-  "author": "undervane",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/undervane/form-effects/issues"
-  },
-  "homepage": "https://github.com/undervane/form-effects#readme"
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-ng-packagr": "~0.13.0",
+    "@angular/cli": "~7.3.9",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.2.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tsickle": ">=0.34.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.2.2"
+  }
 }
