--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,30 @@
 {
-  "include": [
-      "src/**/*",
-      "index.ts"
-  ],
-  "exclude": [
-      "node_modules",
-      "**/*.test.ts",
-      "**/*.spec.ts",
-      "example"
-  ],
+  "compileOnSave": false,
   "compilerOptions": {
-      "lib": [
-          "es6",
-          "dom"
+    "baseUrl": "./",
+    "outDir": "./dist/out-tsc",
+    "sourceMap": true,
+    "declaration": false,
+    "module": "es2015",
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "target": "es5",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2018",
+      "dom"
+    ],
+    "paths": {
+      "form-effects": [
+        "dist/form-effects"
       ],
-      "declaration": true,
-      "target": "es5",
-      "pretty": true,
-      "module": "commonjs",
-      "outDir": "./lib",
-      "moduleResolution": "node",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "allowSyntheticDefaultImports": true,
-      "sourceMap": false,
-      "typeRoots": [
-          "node_modules/@types"
-      ],
+      "form-effects/*": [
+        "dist/form-effects/*"
+      ]
+    }
   }
 }
